got rid of text overflow in player, fixed padding for add button

--- a/app/assets/stylesheets/mix_form.scss
+++ b/app/assets/stylesheets/mix_form.scss
@@ -42,6 +42,7 @@
 			margin-left: 40px;
 
 			.add-track-btn {
+				padding: 50px;
 				text-align: center;
 			}
 
